<resources>
    <string name="app_name">Sknow Coin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="texto_perfil_tutor">Cambiar a Tutor</string>
    <string name="texto_perfil_estudiante">Cambiar a Estudiante</string>
    <string name="texto_editar_perfil">Perfil</string>
    <string name="texto_home">Inicio</string>
    <string name="texto_materias">Materias</string>
    <string name="texto_buscar_tutor">Buscar Tutor</string>
    <string name="texto_tutorias_solicitadas">Tutorías Solicitadas</string>
    <string name="texto_top_mensual">Top mensual</string>
    <string name="texto_configuracion">Configuración</string>
    <string name="texto_informacion">Información</string>
    <string name="texto_ayuda">Ayuda</string>

    <string name="txt_btn_crear_tutoria">Crear</string>
    <string name="texto_nombre_materia">Nombre de la Tutoría</string>
    <string name="texto_lugar_materiatexto_lugar_materia">Top mensual</string>
    <string name="texto_hora_materia">Hora disponible</string>
    <string name="texto_precio_tutoria">Precio por hora</string>
    <string name="texto_area_materia">Area de conocimiento</string>
    <string name="texto_lugar_materia">Lugar de la tutoría</string>


    <string name="texto_crear_tutoria">Crear Tutoría</string>
    <string name="texto_solicitudes">Solicitudes</string>
    <string name="texto_mis_tutorias">Mis tutorías</string>
    <string name="texto_estadisticas">Estadísticas</string>

    <string name="texto_correo">Correo electrónico</string>
    <string name="texto_contrasena">Contraseña</string>
    <string name="texto_nombre">Nombre</string>
    <string name="texto_telefono">Teléfono</string>
    <string name="texto_nueva_contrasena">Contraseña</string>
    <string name="texto_confirmar_contrasena">Confirmar contraseña</string>
    <string name="texto_apellidos">Apellidos</string>
    <string name="texto_codigo_estudiante">Código de Estudiante</string>
    <string name="texto_semestre_actual">Semestre actual</string>
    <string name="texto_carrera">Carrera Universitaria</string>

    <string name="txt_btn_entrar">Entrar</string>
    <string name="txt_btn_ir_registro">Registrarse</string>
    <string name="txt_btn_continuar_registro">Continuar</string>
    <string name="txt_btn_finalizar_registro">Finalizar</string>
    <string name="txt_btn_atras">Atras</string>
    <string name="txt_btn_cancelar">Cancelar</string>

    <string name="descripcion_login">¡Bienvenido! Por favor ingresa con tu correo electrónico y contraseña.</string>
    <string name="titulo_registro">Registro</string>
    <string name="estado_1_registro">1 / 3</string>
    <string name="estado_2_registro">2 / 3</string>
    <string name="estado_3_registro">3 / 3</string>

    <string name="txt_btn_solicitar_tutDisp">Solicitar</string>

    <string name="txt_areas_conocimiento">Areas de conocimiento</string>

    <string name="title_activity_perfil_usuario"></string>
    <string name="buscar_seleccionar">Seleccionar</string>
    <string name="texto_desea_crear_tutoria">¿Desea crear y ofrecer esta tutoría?</string>
    <string name="descripcion_crear_tutoria">Para ofrecer una tutoría, por favor ingresa todos los datos solicitados. Una vez publicada será visible para todos.</string>
    <string name="descripcion_registro">Ingresa tus datos de identificación. Los nombres y apellidos serán visibles para otros usuarios</string>

    <string name="pedir_calificacion">¿Qué puntuación le darías al tutor?</string>
    <string name="pedir_comentario">Tu opinión es muy importante\n¿Qué te pareció la tutoría?</string>
</resources>
