<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_bg">

    <ImageView
        android:id="@+id/logo_singup_uno"
        android:layout_width="220dp"
        android:layout_height="160dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

        <Button
        style="@style/boton_opacidad"
        android:id="@+id/atras_registro_inicial"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_circular"
        android:text="@string/txt_btn_atras"
        android:layout_marginBottom="41dp"
        android:onClick="clickAtrasRegistroUno"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button_siguiente_registro" />

    <Button
        style="@style/boton_resaltado"
        android:id="@+id/button_siguiente_registro"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/boton_circular_resaltado"
        android:text="@string/txt_btn_continuar_registro"
        android:onClick="clicSiguienteRegistro"
        android:layout_above="@+id/atras_registro_inicial"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/descriptionText"
        style="@style/titulo_blanco_regular"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:text="@string/titulo_registro"
        android:layout_below="@+id/logo_singup_uno"
        android:layout_centerHorizontal="true" />

    <EditText
        android:background="@drawable/input_text_circular"
        style="@style/input_text_inicio"
        android:id="@+id/editText_nuevo_correo"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="12dp"
        android:hint="@string/texto_correo"
        android:layout_below="@+id/descriptionText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <EditText
        android:background="@drawable/input_text_circular"
        style="@style/input_text_inicio"
        android:hint="@string/texto_nueva_contrasena"
        android:id="@+id/editText_nueva_contrasena"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/editText_nuevo_correo"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText_confirmar_contrasena"
        style="@style/input_text_inicio"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/input_text_circular"
        android:ems="10"
        android:hint="@string/texto_confirmar_contrasena"
        android:inputType="textPassword"
        android:layout_below="@+id/editText_nueva_contrasena"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <TextView
        style="@style/Descripcion_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado_1_registro"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp" />

</RelativeLayout>